Update 109.1 Lesson 1.md

--- a/LPIC-1 Exam 102/Topic 109: Networking Fundamentals/109.1 Fundamentals of internet protocols/109.1 Lesson 1.md
+++ b/LPIC-1 Exam 102/Topic 109: Networking Fundamentals/109.1 Fundamentals of internet protocols/109.1 Lesson 1.md
@@ -10,4 +10,20 @@
 
 ## Введение
 
-TCP / IP (протокол управления передачей / Интернет-протокол) - это стек протоколов, используемых для обеспечения связи между компьютерами. Несмотря на название, стек состоит из нескольких протоколов, таких как IP, TCP, UDP, ICMP, DNS, SMTP, ARP и других.
+TCP/IP (*протокол управления передачей/Интернет-протокол*) - это стек протоколов, используемых для обеспечения связи между компьютерами. Несмотря на название, стек состоит из нескольких протоколов, таких как IP, TCP, UDP, ICMP, DNS, SMTP, ARP и других.
+
+
+## IP (Internet Protocol)
+
+IP - это протокол, отвечающий за логическую адресацию хоста, позволяющий отправлять пакет с одного хоста на другой. Для этого каждому устройству в сети назначается уникальный IP-адрес, и одному устройству можно назначить более одного адреса. 
+
+В версии 4 протокола IP, обычно называемой IPv4, адрес формируется набором из 32 бит, разделенных на 4 группы по 8 бит, представленных в десятичной форме, называемых «пунктирным квадратом». Например: 
+
+Двоичный формат (4 группы по 8 бит)  
+`11000000.10101000.00001010.00010100` 
+
+Десятичный формат  
+`192.168.10.20`
+
+В IPv4 значения для каждого октета могут находиться в диапазоне от 0 до 255, что эквивалентно 11111111 в двоичном формате.
+
