--- a/LPIC-1 Exam 102/Topic 109: Networking Fundamentals/109.1 Fundamentals of internet protocols/109.1 Lesson 1.md
+++ b/LPIC-1 Exam 102/Topic 109: Networking Fundamentals/109.1 Fundamentals of internet protocols/109.1 Lesson 1.md
@@ -117,6 +117,6 @@ Quotient = 1
 
 | 1   | 0 | 1 | 1 | 0 | 0 | 0 | 0 |
 |:----|:--|:--|:--|:--|:--|:--|:--|
-| 2^7 | 0 | 1 | 1 | 0 | 0 | 0 | 0 |
+| 2^7 | 2<sup>6</sup> | 1 | 1 | 0 | 0 | 0 | 0 |
 
 
