Update 109.1 Lesson 1.md

--- a/LPIC-1 Exam 102/Topic 109: Networking Fundamentals/109.1 Fundamentals of internet protocols/109.1 Lesson 1.md
+++ b/LPIC-1 Exam 102/Topic 109: Networking Fundamentals/109.1 Fundamentals of internet protocols/109.1 Lesson 1.md
@@ -115,8 +115,22 @@ Quotient = 1
 
 1. Каждый бит связан со значением с базовой степенью двойки. Мощности начинаются с 0 и увеличиваются справа налево. В этом примере у нас будет:
 
-| 1   | 0 | 1 | 1 | 0 | 0 | 0 | 0 |
-|:----|:--|:--|:--|:--|:--|:--|:--|
-| 2^7 | 2<sup>6</sup> | 1 | 1 | 0 | 0 | 0 | 0 |
+| 1           | 0           | 1           | 1           | 0           | 0           | 0           | 0           |
+|:------------|:------------|:------------|:------------|:------------|:------------|:------------|:------------|
+|2<sup>7</sup>|2<sup>6</sup>|2<sup>5</sup>|2<sup>4</sup>|2<sup>3</sup>|2<sup>2</sup>|2<sup>1</sup>|2<sup>0</sup>|
 
+2. Когда бит равен 1, мы присваиваем значение соответствующей мощности, когда бит равен 0, результат равен 0.
+
+| 1           | 0           | 1           | 1           | 0           | 0           | 0           | 0           |
+|:------------|:------------|:------------|:------------|:------------|:------------|:------------|:------------|
+|2<sup>7</sup>|2<sup>6</sup>|2<sup>5</sup>|2<sup>4</sup>|2<sup>3</sup>|2<sup>2</sup>|2<sup>1</sup>|2<sup>0</sup>|
+| 128         | 0           | 32          | 16          | 0           | 0           | 0           | 0           |
+
+3. Сложите все значения:
+128 + 32 + 16 = 176
+
+4. Таким образом, 10110000 в двоичном формате равно 176 в десятичном.
+
+
+## Маска сети
 
