Update 109.1 Lesson 1.md

--- a/LPIC-1 Exam 102/Topic 109: Networking Fundamentals/109.1 Fundamentals of internet protocols/109.1 Lesson 1.md
+++ b/LPIC-1 Exam 102/Topic 109: Networking Fundamentals/109.1 Fundamentals of internet protocols/109.1 Lesson 1.md
@@ -134,3 +134,199 @@ Quotient = 1
 
 ## Маска сети
 
+Сетевая маска (или *сетевая маска*) используется вместе с IP-адресом, чтобы определить, какая часть IP представляет сеть, а какая - хосты. Он имеет тот же формат, что и IP-адрес, то есть 32 бита разделены на 4 группы по 8. Например:
+
+| Десятичный    | Двоичный                            | CIDR |
+|:--------------|:------------------------------------|:-----|
+|`255.0.0.0`    |`11111111.00000000.00000000.00000000`| `8`  |
+|`255.255.0.0`  |`11111111.11111111.00000000.00000000`| `16` |
+|`255.255.255.0`|`11111111.11111111.11111111.00000000`| `24` |
+
+Используя в качестве примера маску `255.255.0.0`, она указывает, что в связанном с ней IP-адресе первые 16 бит (2 первых десятичных знака) идентифицируют сеть/подсеть, а последние 16 бит используются для однозначной идентификации хостов в сети. 
+
+Упомянутая выше CIDR (*бесклассовая междоменная маршрутизация*) связана с упрощенной нотацией маски, которая указывает количество битов (1), связанных с сетью/подсетью. Это обозначение обычно используется для замены десятичного формата, например `/24` вместо `255.255.255.0`. 
+
+Интересно отметить, что каждый класс IP имеет стандартную маску, а именно:
+
+| Класс | Первый октект | Диапазон                    | Маска по умолчанию |
+|:------|:--------------|:----------------------------|:-------------------|
+| A     | 1-126         |`1.0.0.0`–`126.255.255.255`  |`255.0.0.0/8`       |
+| B     | 128-191       |`128.0.0.0`-`191.255.255.255`|`255.255.0.0/16`    |
+| C     | 192-223       |`192.0.0.0`–`223.255.255.255`|`255.255.255.0/24`  |
+
+Однако этот шаблон не означает, что это маска, которая будет использоваться всегда. Можно использовать любую маску с любым IP-адресом, как мы увидим ниже. 
+
+Вот несколько примеров использования IP-адресов и масок:
+
+```console
+192.168.8.12 / 255.255.255.0 / 24
+```
+
+Диапазон  
+`192.168.8.0`-`192.168.8.255` 
+
+Адрес сети  
+`192.168.8.0` 
+
+Широковещательный адрес  
+`192.168.8.255`
+
+Хосты  
+`192.168.8.1`-`192.168.8.254` 
+
+В этом случае у нас есть первые 3 цифры (первые 24 бита) IP-адреса, определяющие сеть, а последняя цифра идентифицирует адреса хостов, то есть диапазон этой сети идет от `192.168.8.0` до `192.168.8.255`. 
+
+Теперь у нас есть две важные концепции: каждая сеть/подсеть имеет 2 зарезервированных адреса, первый адрес в диапазоне называется *адресом сети*. В данном случае `192.168.8.0`, который используется для идентификации самой сети/подсети. Последний адрес в диапазоне называется *широковещательным адресом*, в данном случае `192.168.8.255`. 
+
+Этот адрес назначения используется для отправки одного и того же сообщения (пакета) на все IP-узлы в этой сети/подсети. Сетевые и широковещательные адреса не могут использоваться машинами в сети. Таким образом, список IP-адресов, которые можно эффективно настроить, варьируется от `192.168.8.1` до `192.168.8.254`. 
+
+Теперь пример того же IP, но с другой маской:
+
+```console
+192.168.8.12 / 255.255.0.0 / 16
+```
+
+Диапазон  
+`192.168.0.0`-`192.168.255.255` 
+
+Адрес сети  
+`192.168.0.0` 
+
+Широковещательный адрес  
+`192.168.255.255`  
+
+Хосты  
+`192.168.0.1`-`192.168.255.254` 
+
+Посмотрите, как разные маски изменяют диапазон IP-адресов, находящихся в одной сети/подсети. 
+
+Разделение сетей по маскам не ограничивается значениями по умолчанию (8, 16, 24). Мы можем создавать подразделения по желанию, добавляя или удаляя биты в сетевой идентификации, создавая новые подсети. 
+
+Например:
+
+```console
+11111111.11111111.11111111.00000000 = 255.255.255.0 = 24
+```
+
+Если мы хотим разделить сеть выше на 2, просто добавьте еще один бит к идентификатору сети в маске, например:
+
+```console
+11111111.11111111.11111111.10000000 = 255.255.255.128 = 25
+```
+
+У нас есть следующие подсети:
+
+```
+192.168.8.0   - 192.168.8.127
+192.168.8.128 - 192.168.8.255
+```
+
+Если мы еще больше увеличим подразделение сети:
+
+```console
+11111111.11111111.11111111.11000000 = 255.255.255.192 = 26
+```
+
+Мы будем иметь:
+
+```console
+192.168.8.0   - 192.168.8.63
+192.168.8.64  - 192.168.8.127
+192.168.8.128 - 192.168.8.191
+192.168.8.192 - 192.168.8.255
+```
+
+Обратите внимание, что в каждой подсети у нас будет зарезервированный сетевой (первый в диапазоне) и широковещательный (последний в диапазоне) адреса, поэтому чем больше сеть разделена, тем меньше IP-адресов может эффективно использоваться хостами.
+
+
+## Определение сетевых и широковещательных адресов
+
+С помощью IP-адреса и маски мы можем идентифицировать сетевой адрес и широковещательный адрес и, таким образом, определить диапазон IP-адресов для сети/подсети. 
+
+Сетевой адрес получается с помощью «логического И» между IP-адресом и маской в их двоичных форматах. Возьмем пример с IP `192.168.8.12` и маской `255.255.255.192`. 
+
+Преобразование из десятичного в двоичный формат, как мы видели ранее, мы имеем:
+
+```console
+11000000.10101000.00001000.00001100 (192.168.8.12)
+11111111.11111111.11111111.11000000 (255.255.255.192)
+```
+
+С «логическим И» мы имеем 1 и 1 = 1, 0 и 0 = 0, 1 и 0 = 0, поэтому:
+
+```console
+11000000.10101000.00001000.00001100 (192.168.8.12)
+11111111.11111111.11111111.11000000 (255.255.255.192)
+11000000.10101000.00001000.00000000
+```
+
+Таким образом, сетевой адрес для этой подсети - `192.168.8.0`. Теперь, чтобы получить широковещательный адрес, мы должны использовать сетевой адрес, где все биты, относящиеся к адресу хоста, равны 1:
+
+```console
+11000000.10101000.00001000.00000000 (192.168.8.0)
+11111111.11111111.11111111.11000000 (255.255.255.192)
+11000000.10101000.00001000.00111111
+```
+
+Тогда широковещательный адрес `192.168.8.63`. 
+
+В заключение имеем:
+
+```console
+192.168.8.12 / 255.255.255.192 / 26
+```
+
+Диапазон  
+`192.168.8.0`-`192.168.8.63` 
+
+Сетевой адрес  
+`192.168.8.0` 
+
+Адрес трансляции  
+`192.168.8.63` 
+
+Хосты  
+`192.168.8.1`-`192.168.8.62`
+
+
+## Маршрут по умолчанию
+
+Как мы уже видели, машины, находящиеся в одной логической сети/подсети, могут связываться напрямую через протокол IP. 
+
+Но давайте рассмотрим пример ниже: 
+
+Сеть 1  
+`192.168.10.0/24` 
+
+Сеть 2  
+`192.168.200.0/24` 
+
+В этом случае машина `192.168.10.20` не может напрямую отправить пакет на `192.168.200.100`, поскольку они находятся в разных логических сетях. 
+
+Для обеспечения этой связи используется маршрутизатор (или набор маршрутизаторов). Маршрутизатор в этой конфигурации также можно назвать шлюзом, поскольку он обеспечивает шлюз между двумя сетями. Это устройство имеет доступ к обеим сетям, так как оно настроено с IP-адресами из обеих сетей. Например, `192.168.10.1` и `192.168.200.1`, и по этой причине ему удается быть посредником в этой коммуникации. 
+
+Для этого на каждом узле сети должен быть настроен так называемый маршрут по умолчанию. Маршрут по умолчанию указывает IP-адрес, на который должны быть отправлены все пакеты, адресатом которых является IP-адрес, не являющийся частью логической сети хоста. В приведенном выше примере маршрутом по умолчанию для машин в сети `192.168.10.0/24` будет IP `192.168.10.1`, который является IP-адресом маршрутизатора/шлюза, а маршрутом по умолчанию для машин в сети `192.168.200.0/24` будет `192.168.200.1`. 
+
+Маршрут по умолчанию также используется, чтобы машины в частной сети (LAN) имели доступ к Интернету (WAN) через маршрутизатор.
+
+
+# Упражнения для закрепления
+
+
+
+
+# Упражнения на размышление
+
+
+
+# Резюме
+
+
+
+
+# Ответы на упражнения для закрепления
+
+
+
+
+# Ответы на упражнения для размышления
