Update 109.1 Lesson 1.md

--- a/LPIC-1 Exam 102/Topic 109: Networking Fundamentals/109.1 Fundamentals of internet protocols/109.1 Lesson 1.md
+++ b/LPIC-1 Exam 102/Topic 109: Networking Fundamentals/109.1 Fundamentals of internet protocols/109.1 Lesson 1.md
@@ -312,21 +312,62 @@ Quotient = 1
 
 # Упражнения для закрепления
 
+1. Используя IP-адрес `172.16.30.230` и сетевую маску `255.255.255.224`, определите:
+
+| Обозначение CIDR для сетевой маски |                                          |
+|:-----------------------------------|:-----------------------------------------|
+| Адрес сети                         |                                          |
+| Широковещательный адрес            |                                          |
+| Количество IP-адресов, которые можно использовать для хостов в этой подсети | |
+
+2. Какая настройка требуется на хосте, чтобы разрешить IP-связь с хостом в другой логической сети?
 
 
+## Упражнения на размышление
 
-# Упражнения на размышление
+1. Почему диапазоны IP-адресов, начинающиеся со `127`, и диапазон после `224`, не включены в классы IP-адресов A, B или C? 
 
+2. Одним из очень важных полей, принадлежащих IP-пакету, является TTL (Time To Live). Какова функция этого поля и как оно работает? 
 
-
-# Резюме
-
-
-
-
-# Ответы на упражнения для закрепления
+3. Объясните, как работает NAT и когда он используется.
 
 
+## Резюме
+
+В этом уроке были рассмотрены основные концепции протокола IPv4, который отвечает за обеспечение связи между хостами в сети. 
+
+Также были изучены основные операции, которые должен знать профессионал, чтобы конвертировать IP-адреса в разные форматы, а также уметь анализировать и выполнять логические конфигурации в сетях и подсетях. 
+
+Были затронуты следующие темы: 
+* Классы IP-адресов 
+* Публичные и частные IP-адреса 
+* Как преобразовать IP-адреса из десятичного в двоичный формат и наоборот 
+* Сетевая маска (netmask) 
+* Как определить сетевой и широковещательный адреса по IP и маске сети 
+* Маршрут по умолчанию
 
 
-# Ответы на упражнения для размышления
+## Ответы на упражнения для закрепления
+
+**1. Используя IP-адрес `172.16.30.230` и сетевую маску `255.255.255.224`, определите:**  
+
+| Обозначение CIDR для сетевой маски | `27`                                        |
+|:-----------------------------------|:--------------------------------------------|
+| Адрес сети                         | `172.16.30.224`                             |
+| Широковещательный адрес            | `172.16.30.255`                             |
+| Количество IP-адресов, которые можно использовать для хостов в этой подсети |`30`|
+
+**2. Какая настройка требуется на хосте, чтобы разрешить IP-связь с хостом в другой логической сети?**  
+Маршрут по умолчанию
+
+
+## Ответы на упражнения для размышления
+
+**1. Почему диапазоны IP-адресов, начинающиеся со `127`, и диапазон после `224`, не включены в классы IP-адресов A, B или C?**  
+Диапазон, который начинается со `127`, зарезервирован для адресов обратной связи, используемых для тестов и внутренней связи между процессами, например, адрес `127.0.0.1`. Кроме того, адреса выше `224` также используются не в качестве адресов хоста, а для многоадресной рассылки и других целей.
+
+**2. Одним из очень важных полей, принадлежащих IP-пакету, является TTL (Time To Live). Какова функция этого поля и как оно работает?**  
+TTL определяет время жизни пакета. Это реализуется через счетчик, в котором начальное значение, определенное в источнике, уменьшается на каждый шлюз/маршрутизатор, через который проходит пакет, что также называется «переходом». Если этот счетчик достигает 0, пакет отбрасывается.
+
+**3. Объясните, как работает NAT и когда он используется.**  
+Функция NAT (*преобразование сетевых адресов*) позволяет хостам во внутренней сети, которая использует частные IP-адреса, иметь доступ к Интернету, как если бы они были напрямую подключены к нему, с общедоступным IP-адресом, используемым на шлюзе.
