Update 109.1 Lesson 1.md

--- a/LPIC-1 Exam 102/Topic 109: Networking Fundamentals/109.1 Fundamentals of internet protocols/109.1 Lesson 1.md
+++ b/LPIC-1 Exam 102/Topic 109: Networking Fundamentals/109.1 Fundamentals of internet protocols/109.1 Lesson 1.md
@@ -327,7 +327,7 @@ Quotient = 1
 
 1. Почему диапазоны IP-адресов, начинающиеся со `127`, и диапазон после `224`, не включены в классы IP-адресов A, B или C? 
 
-2. Одним из очень важных полей, принадлежащих IP-пакету, является TTL (Time To Live). Какова функция этого поля и как оно работает? 
+2. Одним из очень важных полей, принадлежащих IP-пакету, является TTL (*Time To Live*). Какова функция этого поля и как оно работает? 
 
 3. Объясните, как работает NAT и когда он используется.
 
@@ -366,7 +366,7 @@ Quotient = 1
 **1. Почему диапазоны IP-адресов, начинающиеся со `127`, и диапазон после `224`, не включены в классы IP-адресов A, B или C?**  
 Диапазон, который начинается со `127`, зарезервирован для адресов обратной связи, используемых для тестов и внутренней связи между процессами, например, адрес `127.0.0.1`. Кроме того, адреса выше `224` также используются не в качестве адресов хоста, а для многоадресной рассылки и других целей.
 
-**2. Одним из очень важных полей, принадлежащих IP-пакету, является TTL (Time To Live). Какова функция этого поля и как оно работает?**  
+**2. Одним из очень важных полей, принадлежащих IP-пакету, является TTL (*Time To Live*). Какова функция этого поля и как оно работает?**  
 TTL определяет время жизни пакета. Это реализуется через счетчик, в котором начальное значение, определенное в источнике, уменьшается на каждый шлюз/маршрутизатор, через который проходит пакет, что также называется «переходом». Если этот счетчик достигает 0, пакет отбрасывается.
 
 **3. Объясните, как работает NAT и когда он используется.**  
