Update 109.1 Lesson 2.md

--- a/LPIC-1 Exam 102/Topic 109: Networking Fundamentals/109.1 Fundamentals of internet protocols/109.1 Lesson 2.md
+++ b/LPIC-1 Exam 102/Topic 109: Networking Fundamentals/109.1 Fundamentals of internet protocols/109.1 Lesson 2.md
@@ -10,4 +10,37 @@
 
 ## Введение
 
-В начале этой подтемы мы видели, что стек TCP / IP состоит из ряда различных протоколов. До сих пор мы изучали IP-протокол, который позволяет общаться между машинами через IP-адреса, маски, маршруты и т. Д. Чтобы хост мог получить доступ к сервису, доступному на другом хосте, в дополнение к протоколу IP-адресации на сетевом уровне необходимо будет использовать протокол на транспортном уровне, такой как протоколы TCP и UDP. Эти протоколы осуществляют обмен данными через сетевые порты. Таким образом, помимо определения IP-адреса источника и назначения, для доступа к службе будут использоваться порты источника и назначения. Порт идентифицируется 16-битным полем, что обеспечивает ограничение в 65 535 возможных портов. Службы (пункт назначения) используют порты с 1 по 1023, которые называются привилегированными портами, поскольку у них есть root-доступ к системе. Источник соединения будет использовать диапазон портов от 1024 до 65 535, называемых непривилегированными портами или портами сокетов. Порты, используемые каждым типом услуг, стандартизированы и контролируются IANA (Internet Assigned Numbers Authority). Это означает, что в любой системе порт 22 используется службой SSH, порт 80 - службой HTTP и так далее. В таблице ниже указаны основные службы и соответствующие им порты.
+В начале этой подтемы мы видели, что стек TCP/IP состоит из ряда различных протоколов. До сих пор мы изучали IP-протокол, который позволяет общаться между машинами через IP-адреса, маски, маршруты и т. д. 
+
+Чтобы хост мог получить доступ к сервису, доступному на другом хосте, в дополнение к протоколу IP-адресации на сетевом уровне необходимо будет использовать протокол на транспортном уровне, такой как протоколы TCP и UDP. 
+
+Эти протоколы осуществляют обмен данными через сетевые порты. Таким образом, помимо определения IP-адреса источника и назначения, для доступа к службе будут использоваться порты источника и назначения. 
+
+Порт идентифицируется 16-битным полем, что обеспечивает ограничение в 65 535 возможных портов. Службы (пункт назначения) используют порты с 1 по 1023, которые называются *привилегированными портами*, поскольку у них есть root-доступ к системе. Источник соединения будет использовать диапазон портов от 1024 до 65 535, называемых *непривилегированными портами* или портами сокетов. 
+
+Порты, используемые каждым типом услуг, стандартизированы и контролируются IANA (*Internet Assigned Numbers Authority*). Это означает, что в любой системе порт 22 используется службой SSH, порт 80 - службой HTTP и так далее. 
+
+В таблице ниже указаны основные службы и соответствующие им порты.
+
+| Порт | Сервис                                     |
+|:----------------|:--------------------------------------------|
+| 20   | FTP (data) 
+| 21   | FTP (control)
+| 22|SSH (Secure Socket Shell)
+23|Telnet (Remote connection without encryption)
+25|SMTP (Simple Mail Transfer Protocol), Sending Mails
+53|DNS (Domain Name System)
+80|HTTP (Hypertext Transfer Protocol)
+110|POP3 (Post Office Protocol), Receiving Mails
+123|NTP (Network Time Protocol)
+139|Netbios
+143|IMAP (Internet Message Access Protocol), Accessing Mails
+161|SNMP (Simple Network Management Protocol)
+162|SNMPTRAP, SNMP Notifications
+389|LDAP (Lightweight Directory Access Protocol)
+443|HTTPS (Secure HTTP)
+465|SMTPS (Secure SMTP)
+514|RSH (Remote Shell)
+636|LDAPS (Secure LDAP)
+993|IMAPS (Secure IMAP)
+995|POP3S (Secure POP3)
