Update 109.1 Lesson 2.md

--- a/LPIC-1 Exam 102/Topic 109: Networking Fundamentals/109.1 Fundamentals of internet protocols/109.1 Lesson 2.md
+++ b/LPIC-1 Exam 102/Topic 109: Networking Fundamentals/109.1 Fundamentals of internet protocols/109.1 Lesson 2.md
@@ -22,25 +22,131 @@
 
 В таблице ниже указаны основные службы и соответствующие им порты.
 
-| Порт | Сервис                                     |
-|:----------------|:--------------------------------------------|
+| Порт | Сервис                                                 |
+|:-----|:-------------------------------------------------------|
 | 20   | FTP (data) 
 | 21   | FTP (control)
-| 22|SSH (Secure Socket Shell)
-23|Telnet (Remote connection without encryption)
-25|SMTP (Simple Mail Transfer Protocol), Sending Mails
-53|DNS (Domain Name System)
-80|HTTP (Hypertext Transfer Protocol)
-110|POP3 (Post Office Protocol), Receiving Mails
-123|NTP (Network Time Protocol)
-139|Netbios
-143|IMAP (Internet Message Access Protocol), Accessing Mails
-161|SNMP (Simple Network Management Protocol)
-162|SNMPTRAP, SNMP Notifications
-389|LDAP (Lightweight Directory Access Protocol)
-443|HTTPS (Secure HTTP)
-465|SMTPS (Secure SMTP)
-514|RSH (Remote Shell)
-636|LDAPS (Secure LDAP)
-993|IMAPS (Secure IMAP)
-995|POP3S (Secure POP3)
+| 22   | SSH (Secure Socket Shell)
+| 23   | Telnet (Remote connection without encryption)
+| 25   | SMTP (Simple Mail Transfer Protocol), Sending Mails
+| 53   | DNS (Domain Name System)
+| 80   | HTTP (Hypertext Transfer Protocol)
+| 110  | POP3 (Post Office Protocol), Receiving Mails
+| 123  | NTP (Network Time Protocol)
+| 139  | Netbios
+| 143  | IMAP (Internet Message Access Protocol), Accessing Mails
+| 161  | SNMP (Simple Network Management Protocol)
+| 162  | SNMPTRAP, SNMP Notifications
+| 389  | LDAP (Lightweight Directory Access Protocol)
+| 443  | HTTPS (Secure HTTP)
+| 465  | SMTPS (Secure SMTP)
+| 514  | RSH (Remote Shell)
+| 636  | LDAPS (Secure LDAP)
+| 993  | IMAPS (Secure IMAP)
+| 995  | POP3S (Secure POP3)
+
+В системе Linux стандартные порты служб перечислены в файле `/etc/services`. 
+
+Идентификация желаемого порта назначения в соединении выполняется с помощью символа `:`(двоеточие) после адреса IPv4. Таким образом, при поиске доступа к службе HTTPS, обслуживаемой IP-узлом `200.216.10.15`, клиент должен отправить запрос в пункт назначения `200.216.10.15:443`. 
+
+Перечисленные выше службы и все остальные используют транспортный протокол в соответствии с характеристиками, требуемыми службой, где TCP и UDP являются основными.
+
+
+## Протокол управления передачей (TCP)
+
+TCP - это транспортный протокол с установлением соединения. Это означает, что соединение устанавливается между клиентом через порт сокета и службой через стандартный порт службы. Протокол отвечает за правильную доставку всех пакетов, проверку целостности и порядка пакетов, включая повторную передачу пакетов, потерянных из-за сетевых ошибок. 
+
+Таким образом, приложению не нужно реализовывать этот контроль потока данных, поскольку это уже гарантируется протоколом TCP.
+
+
+## Протокол дейтаграмм пользователя (UDP)
+
+UDP устанавливает соединение между клиентом и службой, но не контролирует передачу данных этого соединения. Другими словами, он не проверяет, были ли пакеты потеряны, вышли из строя и т. д. Приложение отвечает за реализацию необходимых элементов управления.
+
+Из-за меньшего контроля UDP обеспечивает лучшую производительность в потоке данных, что важно для некоторых типов услуг.
+
+
+## Протокол управляющих сообщений Интернета (ICMP)
+
+ICMP - это протокол сетевого уровня в стеке TCP/IP, и его основная функция заключается в анализе и управлении сетевыми элементами, что делает возможным, например: 
+* Контроль объема трафика 
+* Обнаружение недоступных пунктов назначения 
+* Перенаправление маршрута 
+* Проверка статуса удаленных хостов 
+
+Это протокол, используемый командой `ping`, который будет изучен в другом подразделе.
+
+
+## IPv6
+
+До сих пор мы изучали версию 4 протокола IP, то есть IPv4. Это стандартная версия, используемая во всех сетевых и Интернет-средах. Однако у него есть ограничения, особенно в отношении количества доступных адресов, и с учетом уже существующей реальности, когда все устройства будут каким-то образом подключены к Интернету (см. IoT), становится все более распространенным использование версии 6 протокола IP, обычно написано как IPv6. 
+
+IPv6 содержит ряд изменений, новых реализаций и функций, а также новое представление самого адреса. 
+
+Каждый IPv6-адрес имеет 128 бит, разделенных на 8 групп по 16 бит, представленных шестнадцатеричными значениями. 
+
+Например:
+
+```console
+2001:0db8:85a3:08d3:1319:8a2e:0370:7344
+```
+
+
+### Сокращения
+
+IPv6 определяет способы сокращения адресов в некоторых ситуациях. Давайте рассмотрим следующий адрес:
+
+```console
+2001:0db8:85a3:0000:0000:0000:0000:7344
+```
+
+Первая возможность - уменьшить количество строк с `0000` до `0`, что приведет к:
+
+```console
+2001:0db8:85a3:0:0:0:0:7344
+```
+
+Кроме того, в случае групповых строк со значением 0 они могут быть опущены следующим образом:
+
+```console
+2001:0db8:85a3::7344
+```
+
+Однако это последнее сокращение может быть сделано только один раз в адресе. См. Пример:
+
+```console
+2001:0db8:85a3:0000:0000:1319:0000:7344
+
+2001:0db8:85a3:0:0:1319:0:7344
+
+2001:0db8:85a3::1319:0:7344
+```
+
+### Типы IPv6-адресов
+
+IPv6 классифицирует адреса на 3 типа: 
+
+Одноадресный(Unicast)  
+Обозначает единый сетевой интерфейс. По умолчанию 64 бита слева определяют сеть, а 64 бита справа определяют интерфейс. 
+
+Многоадресная(Multicast)  
+рассылка Определяет набор сетевых интерфейсов. Пакет, отправленный на адрес многоадресной рассылки, будет отправлен на все интерфейсы, принадлежащие этой группе. Несмотря на то, что он похож, его не следует путать с широковещательной передачей, которой нет в протоколе IPv6. 
+
+Anycast  
+Это также идентифицирует набор интерфейсов в сети, но пакет, направленный на произвольный адрес, будет доставлен только на один адрес в этом наборе, а не на все.
+
+
+## Различия между IPv4 и IPv6
+
+В дополнение к адресу можно указать несколько других различий между версиями 4 и 6 IP. Вот некоторые из них: 
+* Служебные порты соответствуют одним и тем же стандартам и протоколам (TCP, UDP), разница только в представлении IP и набора портов. В IPv6 IP-адрес должен быть защищен `[]` (квадратные скобки): 
+IPv4  
+`200.216.10.15:443`  
+IPv6  
+`[2001: 0db8: 85a3: 08d3: 1319: 8a2e: 0370: 7344]:443` 
+
+* IPv6 не реализует функцию широковещательной передачи точно так, как она существует в IPv4. Однако того же результата можно достичь, отправив пакет по адресу `ff02::1`, достигнув всех хостов в локальной сети. Что-то похожее на использование `224.0.0.1` на IPv4 для многоадресной рассылки в качестве пункта назначения. 
+* Благодаря функции SLAAC (*автоконфигурация адреса без сохранения состояния*) узлы IPv6 могут самостоятельно настраиваться. 
+* Поле TTL (*время жизни*) IPv4 было заменено на «Hop Limit» в заголовке IPv6. 
+* Все интерфейсы IPv6 имеют локальный адрес, называемый локальным адресом канала, с префиксом `fe80::/10`. 
+* IPv6 реализует *протокол обнаружения соседей* (NDP), который похож на ARP, используемый IPv4, но с гораздо большей функциональностью.
