Update 109.1 Lesson 2.md

--- a/LPIC-1 Exam 102/Topic 109: Networking Fundamentals/109.1 Fundamentals of internet protocols/109.1 Lesson 2.md
+++ b/LPIC-1 Exam 102/Topic 109: Networking Fundamentals/109.1 Fundamentals of internet protocols/109.1 Lesson 2.md
@@ -150,3 +150,58 @@ IPv6
 * Поле TTL (*время жизни*) IPv4 было заменено на «Hop Limit» в заголовке IPv6. 
 * Все интерфейсы IPv6 имеют локальный адрес, называемый локальным адресом канала, с префиксом `fe80::/10`. 
 * IPv6 реализует *протокол обнаружения соседей* (NDP), который похож на ARP, используемый IPv4, но с гораздо большей функциональностью.
+
+
+# Упражнения для закрепления
+
+1. Какой порт используется по умолчанию для протокола SMTP? 
+2. Сколько разных портов доступно в системе? 
+3. Какой транспортный протокол обеспечивает правильную доставку всех пакетов, проверяя целостность и порядок пакетов? 
+4. Какой тип IPv6-адреса используется для отправки пакета на все интерфейсы, принадлежащие группе хостов?
+
+
+## Упражнения на размышление
+
+1. Назовите 4 примера сервисов, которые по умолчанию используют протокол TCP. 
+2. Каково имя поля в пакете заголовка IPv6, которое реализует тот же ресурс TTL в IPv4? 
+3. Какую информацию может обнаруживать протокол обнаружения соседей (NDP)?
+
+
+## Резюме
+
+В этом уроке были рассмотрены основные транспортные протоколы и службы, используемые в стеке TCP/IP. 
+ 
+Другой важной темой была версия IP-протокола 6, включая адреса IPv6 и основные отличия от IPv4. 
+
+Были затронуты следующие темы: 
+* Корреляция между номерами портов и службами 
+* TCP (протокол управления передачей) 
+* UDP (протокол дейтаграмм пользователя) 
+* ICMP (протокол управляющих сообщений Интернета) 
+* Адрес IPv6 и способы его сокращения 
+* Типы IPv6-адресов 
+* Основные различия между IPv4 и IPv6
+
+
+## Ответы на упражнения для закрепления
+
+**1. Какой порт используется по умолчанию для протокола SMTP?**  
+25
+
+**2. Сколько разных портов доступно в системе?**  
+65535
+
+**3. Какой транспортный протокол обеспечивает правильную доставку всех пакетов, проверяя целостность и порядок пакетов?**
+TCP
+
+**4. Какой тип IPv6-адреса используется для отправки пакета на все интерфейсы, принадлежащие группе хостов?**  
+Multicast
+
+
+## Ответы на упражнения для размышления
+
+**1. Назовите 4 примера сервисов, которые по умолчанию используют протокол TCP.**   
+
+2. Каково имя поля в пакете заголовка IPv6, которое реализует тот же ресурс TTL в IPv4? 
+
+3. Какую информацию может обнаруживать протокол обнаружения соседей (NDP)?
