Update 109.1 Lesson 2.md

--- a/LPIC-1 Exam 102/Topic 109: Networking Fundamentals/109.1 Fundamentals of internet protocols/109.1 Lesson 2.md
+++ b/LPIC-1 Exam 102/Topic 109: Networking Fundamentals/109.1 Fundamentals of internet protocols/109.1 Lesson 2.md
@@ -201,7 +201,10 @@ Multicast
 ## Ответы на упражнения для размышления
 
 **1. Назовите 4 примера сервисов, которые по умолчанию используют протокол TCP.**   
+FTP, SMTP, HTTP, POP3, IMAP, SSH
 
-2. Каково имя поля в пакете заголовка IPv6, которое реализует тот же ресурс TTL в IPv4? 
+**2. Каково имя поля в пакете заголовка IPv6, которое реализует тот же ресурс TTL в IPv4?**
+Hop Limit
 
-3. Какую информацию может обнаруживать протокол обнаружения соседей (NDP)?
+**3. Какую информацию может обнаруживать протокол обнаружения соседей (NDP)?**  
+NDP может получать различную информацию из сети, включая другие узлы, повторяющиеся адреса, маршруты, DNS-серверы, шлюзы и т. д.
